[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/World/SubWorld.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/World/GameRoom.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/World/Floors/Cellblock.gd" type="Script" id=3]

[node name="Cellblock" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="CellblockRoom" parent="." index="0" instance=ExtResource( 2 )]

[node name="CBStairs1" parent="." index="1" instance=ExtResource( 2 )]
position = Vector2( -64, 0 )
roomName = "Stairs"
roomSprite = 3
roomColor = 2

[node name="CBStairs2" parent="." index="2" instance=ExtResource( 2 )]
position = Vector2( 64, 0 )
roomName = "Stairs"
roomSprite = 3
roomColor = 2

[node name="CellblockRoom4" parent="." index="3" instance=ExtResource( 2 )]
position = Vector2( 0, -64 )
roomColor = 1

[node name="CellblockRoom5" parent="." index="4" instance=ExtResource( 2 )]
position = Vector2( 0, 64 )

[node name="CellblockRoom6" parent="." index="5" instance=ExtResource( 2 )]
position = Vector2( 0, -128 )
roomColor = 1

[node name="CellblockRoom7" parent="." index="6" instance=ExtResource( 2 )]
position = Vector2( 0, 128 )

[node name="CellblockRoom8" parent="." index="7" instance=ExtResource( 2 )]
position = Vector2( -64, 128 )
roomColor = 1

[node name="CellblockRoom9" parent="." index="8" instance=ExtResource( 2 )]
position = Vector2( 64, 128 )
roomColor = 2

[node name="CellblockRoom10" parent="." index="9" instance=ExtResource( 2 )]
position = Vector2( -128, 128 )
roomID = "cellblock_orange_nearcell"
roomColor = 1

[node name="CellblockRoom11" parent="." index="10" instance=ExtResource( 2 )]
position = Vector2( -128, 192 )
roomName = "My cell"
roomID = "cellblock_orange_playercell"
roomDescription = "There will be something here at some point"
roomColor = 1

[connection signal="onEnter" from="CBStairs1" to="." method="_on_CBStairs1_onEnter"]
[connection signal="onReact" from="CBStairs1" to="." method="_on_CBStairs1_onReact"]
[connection signal="onEnter" from="CBStairs2" to="." method="_on_CBStairs2_onEnter"]
[connection signal="onReact" from="CBStairs2" to="." method="_on_CBStairs2_onReact"]
[connection signal="onEnter" from="CellblockRoom11" to="." method="_on_CellblockRoom11_onEnter"]
[connection signal="onReact" from="CellblockRoom11" to="." method="_on_CellblockRoom11_onReact"]
